GUI-6302 fix exit dataflow option not showing

--- a/assets/stylesheets/less/partials/table.less
+++ b/assets/stylesheets/less/partials/table.less
@@ -617,7 +617,7 @@ html.edge {
         }
     }
 
-    &.exportViewOpen {
+    &.exportMode {
         th.col0 {
             pointer-events: initial !important;
             // columnPicker class disables the select all behavior of the first
@@ -889,7 +889,7 @@ html.edge {
                 display: none;
             }
         }
-        &.exportViewOpen {
+        &.exportMode {
             .tableTitle .dropdownBox {
                 // allow exiting of export through dropdown menu
                display: block;
